--- a/src/app/helper/helper-brew-ratio/helper-brew-ratio.component.html
+++ b/src/app/helper/helper-brew-ratio/helper-brew-ratio.component.html
@@ -36,7 +36,7 @@
                    type="text"></ion-input>
       </ion-item>
 
-      <ion-item>
+      <ion-item lines="none">
         <ion-label position="stacked">{{"PAGE_HELPER_BREW_RATIO_WATER" | translate}}</ion-label>
         <ion-input [(ngModel)]="brewRatio.water" inputmode="decimal" prevent-characters remove-empty-number
                    type="text"></ion-input>
