--- a/src/app/helper/helper-water-hardness/helper-water-hardness.component.html
+++ b/src/app/helper/helper-water-hardness/helper-water-hardness.component.html
@@ -48,7 +48,7 @@
         <ion-input [(ngModel)]="waterhardness.ca" inputmode="decimal" prevent-characters remove-empty-number
                    type="text"></ion-input>
       </ion-item>
-      <ion-item>
+      <ion-item lines="none">
         <ion-label position="stacked">{{"PAGE_HELPER_WATER_HARDNESS_MG_CONTENTS" | translate}}</ion-label>
         <ion-input [(ngModel)]="waterhardness.mg" inputmode="decimal" prevent-characters remove-empty-number
                    type="text"></ion-input>
