--- a/src/app/info/about/about.component.html
+++ b/src/app/info/about/about.component.html
@@ -10,8 +10,7 @@
     </ion-title>
   </ion-toolbar>
 </ion-header>
-
-<ion-content class="ion-padding">
+<ion-content>
   <ion-card>
 
       <ion-item>
