--- a/src/app/info/privacy/privacy.component.html
+++ b/src/app/info/privacy/privacy.component.html
@@ -11,7 +11,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="ion-padding-horizontal">
+<ion-content>
   <ion-card class="ion-padding-horizontal">
 
     <h2>Privacy Policy</h2> <p> Graphefruit built the Beanconqueror app as an Open Source app. This SERVICE is provided by
