--- a/src/app/info/terms/terms.component.html
+++ b/src/app/info/terms/terms.component.html
@@ -11,7 +11,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="ion-padding-horizontal">
+<ion-content>
   <ion-card class="ion-padding-horizontal">
     <h2>Terms &amp; Conditions</h2> <p>By downloading or using the app, these terms will automatically apply to you – you should make sure
     therefore that you read them carefully before using the app. You’re not allowed to copy, or modify the
