--- a/src/app/info/thanks/thanks.component.html
+++ b/src/app/info/thanks/thanks.component.html
@@ -10,9 +10,7 @@
     </ion-title>
   </ion-toolbar>
 </ion-header>
-
-
-<ion-content class="ion-padding-horizontal">
+<ion-content>
   <ion-card>
     <ion-card-header>
       {{"PAGE_THANKS_THANKS_FOR_YOUR_SUPPORT" | translate}}
