--- a/src/app/mill/mill-add/mill-add.component.html
+++ b/src/app/mill/mill-add/mill-add.component.html
@@ -1,4 +1,4 @@
-<ion-content>
+<ion-content class="ion-padding-top">
     <form #addMillForm="ngForm" novalidate>
       <ion-item>
         <ion-label position="stacked">{{"NAME" | translate}}*</ion-label>
