--- a/src/app/preparation/preparation-add-type/preparation-add-type.component.html
+++ b/src/app/preparation/preparation-add-type/preparation-add-type.component.html
@@ -1,6 +1,5 @@
-<ion-content>
-
-  <div class="ion-margin-horizontal popover">
+<ion-content class="ion-padding-top">
+  <div class="popover">
     <form #addPreparationForm="ngForm" novalidate>
       <ion-item>
         <ion-label position="stacked">{{"PREPARATION_TYPE_NAME" | translate}}*</ion-label>
