--- a/src/app/statistic/statistic.page.html
+++ b/src/app/statistic/statistic.page.html
@@ -8,7 +8,7 @@
     </ion-title>
   </ion-toolbar>
 </ion-header>
-<ion-content class="ion-padding-horizontal">
+<ion-content>
   <ion-card>
     <ion-card-content>
       <canvas #brewChart></canvas>
