--- a/src/components/brew-dashboard-information/brew-dashboard-information.component.scss
+++ b/src/components/brew-dashboard-information/brew-dashboard-information.component.scss
@@ -1,6 +1,6 @@
 :host {
   .vr {
-    border-right: 2px solid var(--ion-color-accent-secondary);
+    border-right: 2px solid var(--ion-color-accent);
     height: 60%;
     position: absolute;
     top: 20%;
