--- a/src/popover/welcome-popover/welcome-popover.component.html
+++ b/src/popover/welcome-popover/welcome-popover.component.html
@@ -139,7 +139,7 @@
           </div>
           <ion-row class="ion-padding-top">
             <ion-col size="12">
-              <ion-button (click)="finish()" class="big-icon-only" fill="clear" tappable>
+              <ion-button (click)="finish()" class="big-icon-96-only" fill="clear" tappable>
                 <ion-icon  name="beanconqueror-next" slot="icon-only"></ion-icon>
               </ion-button>
             </ion-col>
