--- a/src/app/dashboard/dashboard.page.html
+++ b/src/app/dashboard/dashboard.page.html
@@ -1,7 +1,12 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar with-add-button>
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-buttons slot="end">
+      <ion-button (click)="addBrew()" class="big-add-icon" fill="clear">
+        <ion-icon class="ion-color-accent" name="beanconqueror-add-box" slot="icon-only"></ion-icon>
+      </ion-button>
     </ion-buttons>
     <ion-title>
       Beanconqueror
@@ -73,18 +78,6 @@
         </ion-col>
       </ion-row>
     </ion-grid>
-
-  <ion-grid>
-
-    <ion-row>
-      <ion-col size="12">
-        <ion-button (click)="addBrew()" add-brew color="accent" expand="block">
-          <ion-icon name="beanconqueror-dashboard-add-fill" size="large" slot="start"></ion-icon>
-          <span class="ion-text-bold" slot="end">{{"PAGE_HOME_START_BREW" | translate}}</span>
-        </ion-button>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
 
   <ion-list>
     <ion-list-header>
