--- a/src/app/info/contact/contact.component.html
+++ b/src/app/info/contact/contact.component.html
@@ -10,8 +10,7 @@
     </ion-title>
   </ion-toolbar>
 </ion-header>
-
-<ion-content class="ion-padding">
+<ion-content>
   <ion-card>
     <ion-card-header>
       {{"PAGE_CONTACT_SUGGESTIONS_QUESTIONS_WISHES" | translate}}
