--- a/src/app/preparation/preparation.page.html
+++ b/src/app/preparation/preparation.page.html
@@ -1,11 +1,11 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar with-add-button>
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-buttons slot="end">
-      <ion-button (click)="add()" class="big-icon-only">
-        <ion-icon class="ion-color-accent" name="beanconqueror-add" slot="icon-only"></ion-icon>
+      <ion-button (click)="add()" class="big-add-icon" fill="clear">
+        <ion-icon class="ion-color-accent" name="beanconqueror-add-box" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-buttons>
     <ion-title>
