--- a/src/app/settings/settings.page.html
+++ b/src/app/settings/settings.page.html
@@ -19,7 +19,7 @@
         <ion-label>{{"IMPORT" | translate}}</ion-label>
         <ion-icon name="chevron-forward-outline" slot="end"></ion-icon>
       </ion-item>
-      <ion-item (click)="export()" button lines="none" tappable>
+      <ion-item (click)="export()" button lines="none" lines="none" tappable>
         <ion-label>{{"EXPORT" | translate}}</ion-label>
         <ion-icon name="chevron-forward-outline" slot="end"></ion-icon>
       </ion-item>
@@ -58,7 +58,7 @@
         <p>{{"PAGE_SETTINGS_TRACK_BREW_COORDINATES_DESCRIPTION" | translate}}</p></ion-label>
         <ion-checkbox (ionChange)="checkCoordinates()" (ngModelChange)="saveSettings();" [(ngModel)]="settings.track_brew_coordinates"></ion-checkbox>
       </ion-item>
-      <ion-item>
+      <ion-item lines="none">
         <ion-label class="ion-margin-end"><h2>{{"PAGE_SETTINGS_FAST_REPEAT" | translate}}</h2>
           <p>{{"PAGE_SETTINGS_FAST_REPEAT_DESCRIPTION" | translate}}</p></ion-label>
         <ion-checkbox  (ngModelChange)="saveSettings();" [(ngModel)]="settings.fast_brew_repeat"></ion-checkbox>
