--- a/src/popover/update-popover/update-popover.component.scss
+++ b/src/popover/update-popover/update-popover.component.scss
@@ -2,9 +2,15 @@
 
   top: 25%;
   bottom:25%;
+  height:50%;
   position: absolute;
   margin-inline-start: 10px;
   margin-inline-end: 10px;
   border-radius: 6px;
   margin-block-end: 10px;
+  ul {
+    text-align:left;
+  }
+  ion-slides { height: initial; }
+
 }
