--- a/src/app/beans/beans-edit/beans-edit.component.html
+++ b/src/app/beans/beans-edit/beans-edit.component.html
@@ -8,7 +8,7 @@
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
-<ion-content class="ion-padding">
+<ion-content>
   <ion-card class="popover">
   <ion-item>
     <ion-label position="stacked">{{"BEAN_DATA_NAME" | translate}}*</ion-label>
