--- a/src/app/brew/brew-add/brew-add.component.html
+++ b/src/app/brew/brew-add/brew-add.component.html
@@ -8,7 +8,7 @@
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
-<ion-content class="ion-padding">
+<ion-content>
   <ion-card *ngIf="showSectionBeforeBrew()"
             class="popover" style="display:flex; flex-direction: column;">
 
