--- a/src/app/dashboard/dashboard.page.html
+++ b/src/app/dashboard/dashboard.page.html
@@ -3,9 +3,9 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-buttons slot="end" style="margin-right:-10px;">
+    <ion-buttons slot="end">
       <ion-button (click)="addBrew()" class="big-add-icon" fill="clear">
-        <ion-icon class="ion-color-accent" name="beanconqueror-add-box" slot="icon-only"></ion-icon>
+        <ion-icon class="ion-color-accent" name="beanconqueror-add" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-buttons>
     <ion-title>
@@ -14,8 +14,6 @@
   </ion-toolbar>
 </ion-header>
 <ion-content>
-
-
     <ion-grid>
       <ion-row>
         <ion-col size="6">
