--- a/src/components/brew-dashboard-information/brew-dashboard-information.component.html
+++ b/src/components/brew-dashboard-information/brew-dashboard-information.component.html
@@ -15,9 +15,7 @@
         <div class="vr"></div>
       </ion-col>
       <ion-col size="9" size-xs="8" style="padding-left:16px;">
-        <ion-card class="ion-no-padding ion-no-margin long-card"
-                  style="padding-top:8px;padding-right:8px;padding-bottom:8px;">
-          <ion-card-content>
+        <div style="padding-top:8px;padding-right:8px;padding-bottom:8px;">
             <ion-grid class="ion-no-padding">
               <ion-row>
                 <ion-col class="margin-header" size="10">
@@ -45,8 +43,7 @@
                 </ion-col>
               </ion-row>
             </ion-grid>
-          </ion-card-content>
-        </ion-card>
+        </div>
       </ion-col>
     </ion-row>
   </ion-grid>
