--- a/src/app/beans/bean-popover-actions/bean-popover-actions.component.html
+++ b/src/app/beans/bean-popover-actions/bean-popover-actions.component.html
@@ -1,5 +1,9 @@
 <ion-content>
 <ion-list lines="full">
+  <ion-item (click)="choose(getStaticActions().DETAIL)" button tappable>
+    <ion-icon name="beanconqueror-detail" slot="start"></ion-icon>
+    <span>{{"DETAIL" | translate}}</span>
+  </ion-item>
   <ion-item (click)="choose(getStaticActions().REPEAT)" button tappable>
     <ion-icon name="beanconqueror-repeat" slot="start"></ion-icon>
     <span>{{"REPEAT" | translate}}</span>
