--- a/src/app/brew/brew.page.html
+++ b/src/app/brew/brew.page.html
@@ -3,9 +3,9 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-buttons slot="end" style="margin-right:-10px;">
+    <ion-buttons slot="end">
       <ion-button (click)="add()" class="big-add-icon" fill="clear">
-        <ion-icon class="ion-color-accent" name="beanconqueror-add-box" slot="icon-only"></ion-icon>
+        <ion-icon class="ion-color-accent" name="beanconqueror-add" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-buttons>
     <ion-title>
