--- a/src/app/helper/helper-brew-ratio/helper-brew-ratio.component.scss
+++ b/src/app/helper/helper-brew-ratio/helper-brew-ratio.component.scss
@@ -21,4 +21,11 @@
 
 
   }
+  ion-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+  }
 }
